Protect concurrent access of Scientific Studies
Changes:
- Consolidate ScientificStudyManager access to the studies list
- Protect access to studies with a synchronised section
- Science table in Person window drops id column and return correct column types

Part of #1149